create main superviser and the user profiler agent

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,28 @@
-# Environment variables template
+# Career Planning Multi-Agent System Environment Variables
+
+# OpenAI Configuration (Required)
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Tavily Search Configuration (Optional)
+TAVILY_API_KEY=your_tavily_api_key_here
+
+# LangSmith Configuration (Optional - for monitoring)
+LANGSMITH_API_KEY=your_langsmith_api_key_here
+LANGCHAIN_PROJECT=career-planning-system
+LANGCHAIN_TRACING_V2=false
+
+# Backend Configuration
+HOST=0.0.0.0
+PORT=8000
+DEBUG=false
+LOG_LEVEL=INFO
+
+# Database Configuration (if needed in future)
+# DATABASE_URL=sqlite:///./career_planning.db
+
+# Frontend Configuration
+VITE_API_URL=
+VITE_API_BASE=
+
+# Docker Configuration
+COMPOSE_PROJECT_NAME=career-planning
