--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,6 @@
 # Backend Dockerfile for Career Planning Multi-Agent System
-FROM python:3.11-slim
+# Using Debian Bookworm (stable) for consistent package availability
+FROM python:3.11-slim-bookworm
 
 # Set working directory
 WORKDIR /app
@@ -10,18 +11,26 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/app
 
 # Install system dependencies
+# Note: weasyprint requires Cairo, Pango, and GDK-Pixbuf for PDF generation
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     curl \
+    libcairo2 \
+    libpango-1.0-0 \
+    libpangocairo-1.0-0 \
+    libgdk-pixbuf2.0-0 \
+    libffi-dev \
+    shared-mime-info \
+    fonts-dejavu-core \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements file
 COPY requirements.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
 # Copy application code
 COPY . .
