--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,14 +35,12 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
+        # Use localhost for browser-based API calls (frontend runs in browser, not container)
         - VITE_API_URL=${VITE_API_URL:-http://localhost:8000}
     container_name: career-planning-frontend
     restart: unless-stopped
     ports:
-      - "80:80"
-      - "3000:80" # Alternative port
-    env_file:
-      - ./frontend/.env
+      - "3000:80"
     depends_on:
       backend:
         condition: service_healthy
@@ -56,9 +54,3 @@ networks:
   career-planning-network:
     driver: bridge
     name: career-planning-network
-
-volumes:
-  backend-outputs:
-    name: career-planning-outputs
-  backend-data:
-    name: career-planning-data
