--- a/backend/.env.example
+++ b/backend/.env.example
@@ -32,6 +32,32 @@ LANGSMITH_API_KEY=your_langsmith_api_key_here
 LANGCHAIN_PROJECT=career-planning-system
 LANGCHAIN_TRACING_V2=false
 
+# ==================== DISTRIBUTED TRACING ====================
+# OpenTelemetry + Jaeger Configuration (Latest: v1.38.0, Jaeger v2.10.0)
+
+# Enable/Disable distributed tracing
+ENABLE_TRACING=false
+
+# Service name as it appears in Jaeger UI
+OTEL_SERVICE_NAME=career-planning-system
+
+# Jaeger OTLP endpoint
+# For Docker: http://jaeger:4317 (internal network)
+# For local dev: http://localhost:4317
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+
+# Capture LangChain/LangGraph inputs and outputs in traces
+OTEL_PYTHON_LANGCHAIN_CAPTURE_INPUTS=true
+OTEL_PYTHON_LANGCHAIN_CAPTURE_OUTPUTS=true
+
+# Additional OpenTelemetry resource attributes (optional)
+# OTEL_RESOURCE_ATTRIBUTES=deployment.environment=development,service.version=1.0.0
+
+# Note: Auto-instrumentation for LangChain/LangGraph
+# To enable automatic tracing without code changes, use:
+# opentelemetry-instrument python main.py
+# See backend/tracing/README.md for complete documentation
+
 # Backend Configuration
 HOST=0.0.0.0
 PORT=8000
