--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,18 +16,33 @@ services:
       - PYTHONPATH=/app
       - HOST=0.0.0.0
       - PORT=8000
+      # OpenTelemetry Tracing Configuration
+      - OTEL_SERVICE_NAME=${OTEL_SERVICE_NAME:-career-planning-system}
+      - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT:-http://jaeger:4317}
+      - OTEL_PYTHON_LANGCHAIN_CAPTURE_INPUTS=${OTEL_PYTHON_LANGCHAIN_CAPTURE_INPUTS:-true}
+      - OTEL_PYTHON_LANGCHAIN_CAPTURE_OUTPUTS=${OTEL_PYTHON_LANGCHAIN_CAPTURE_OUTPUTS:-true}
+      - ENABLE_TRACING=${ENABLE_TRACING:-true}
     volumes:
       # Mount output directories for logs and reports
       - ./backend/outputs:/app/outputs
       - ./backend/data:/app/data
     networks:
       - career-planning-network
+    depends_on:
+      # Wait for Jaeger to be healthy before starting backend
+      # This ensures tracing infrastructure is ready
+      jaeger:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 40s
+      retries: 5
+      # Increased start_period to allow time for:
+      # - Python dependencies loading
+      # - LLM initialization
+      # - OpenTelemetry instrumentation setup (if enabled)
+      start_period: 60s
 
   # Frontend service - React application
   frontend:
@@ -49,6 +64,32 @@ services:
     environment:
       - NGINX_HOST=localhost
       - NGINX_PORT=80
+
+  # Jaeger v2 - Distributed Tracing Backend
+  # OpenTelemetry-native all-in-one for development
+  jaeger:
+    image: jaegertracing/jaeger:2.10.0
+    container_name: career-planning-jaeger
+    restart: unless-stopped
+    ports:
+      # Jaeger UI - Web interface for viewing traces
+      - "16686:16686"
+      # OTLP gRPC - Receives traces from OpenTelemetry (recommended)
+      - "4317:4317"
+      # OTLP HTTP - Alternative HTTP endpoint
+      - "4318:4318"
+    networks:
+      - career-planning-network
+    environment:
+      # Jaeger v2 configuration
+      - COLLECTOR_OTLP_ENABLED=true
+      - LOG_LEVEL=info
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:16686"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
 networks:
   career-planning-network:
