--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -81,6 +81,22 @@ langchain-text-splitters==0.3.11
 PyYAML==6.0.2
 regex==2025.9.1
 
+# RAG System - Document processing and vector storage
+chromadb==0.5.23
+pypdf==5.1.0
+pymupdf==1.26.6
+python-docx==1.1.0
+
+# Data Ingestion System
+watchdog==4.0.0              # File system monitoring
+APScheduler==3.10.4          # Scheduled tasks and job scheduling
+beautifulsoup4==4.12.3       # Web scraping and HTML parsing
+selenium==4.16.0             # Browser automation for JS-heavy sites
+aiofiles==23.2.1             # Async file operations
+aiosqlite==0.19.0            # Async SQLite for ingestion registry
+prometheus-client==0.19.0    # Metrics collection and export
+lxml==5.3.0                  # XML/HTML parser for web scraping
+
 # Async and networking
 anyio==4.10.0
 sniffio==1.3.1
