--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -40,6 +40,7 @@ services:
       # Mount output directories for logs and reports
       - ./backend/outputs:/app/outputs
       - ./backend/data:/app/data
+      - ./backend/knowledge_base:/app/knowledge_base
     networks:
       - career-planning-network
     # NO HEALTH CHECK in debug mode
