--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,59 +1,35 @@
-# Frontend Dockerfile for Career Planning System
-# Multi-stage build: Build with Node.js, serve with Nginx
+# Build stage
+FROM node:20-alpine as build
 
-# ============================================
-# Stage 1: Build the React/Vite application
-# ============================================
-FROM node:20-alpine AS build
-
-# Set working directory
 WORKDIR /app
 
-# Accept build arguments for environment variables
-ARG VITE_API_URL=http://localhost:8000
-ENV VITE_API_URL=$VITE_API_URL
-
 # Copy package files
-COPY package.json yarn.lock* ./
+COPY package.json yarn.lock ./
 
-# Install dependencies using Yarn
+# Install dependencies
 RUN yarn install --frozen-lockfile
 
-# Copy application source code
+# Copy source code
 COPY . .
 
-# Build the application using Yarn
+# Build the application
+# Accept build arguments for environment variables
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 RUN yarn build
 
-# ============================================
-# Stage 2: Serve with Nginx
-# ============================================
-FROM nginx:1.25-alpine
+# Production stage
+FROM nginx:alpine
 
-# Copy custom nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Copy built assets from build stage
+# Copy build artifacts
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Create nginx cache directories
-RUN mkdir -p /var/cache/nginx/client_temp && \
-    mkdir -p /var/cache/nginx/proxy_temp && \
-    mkdir -p /var/cache/nginx/fastcgi_temp && \
-    mkdir -p /var/cache/nginx/uwsgi_temp && \
-    mkdir -p /var/cache/nginx/scgi_temp
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Set proper permissions
-RUN chown -R nginx:nginx /usr/share/nginx/html && \
-    chown -R nginx:nginx /var/cache/nginx && \
-    chmod -R 755 /usr/share/nginx/html
-
-# Expose port 80
+# Expose port
 EXPOSE 80
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD wget --quiet --tries=1 --spider http://localhost:80/ || exit 1
-
-# Start nginx in foreground
+# Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
